--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  provider: ^6.1.5+1
+  fl_chart: ^1.1.1
+  intl: ^0.20.2
+  visibility_detector: ^0.4.0+2
+  horizontal_picker: ^1.2.0
+  step_progress_indicator: ^1.0.2
 
 dev_dependencies:
   flutter_test:
