--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  font_awesome_flutter: ^10.7.0 # THÊM: Thư viện icon Google
   provider: ^6.1.5+1
   fl_chart: ^0.68.0
   intl: ^0.20.2
   visibility_detector: ^0.4.0+2
   horizontal_picker: ^1.2.0
   step_progress_indicator: ^1.0.2
+  lottie: ^3.3.2
+  firebase_core: ^4.2.1
+  firebase_auth: ^6.1.2
+  google_sign_in: ^6.2.1
+  cloud_firestore: ^6.1.0
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +69,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assets/animations/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
