--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ dependencies:
   firebase_auth: ^6.1.2
   google_sign_in: ^6.2.1
   cloud_firestore: ^6.1.0
+  shared_preferences: ^2.5.3
+  awesome_notifications: ^0.10.1
+  timezone: ^0.10.1
+  flutter_launcher_icons: ^0.14.4
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +75,7 @@ flutter:
 
   assets:
     - assets/animations/
+    #- assets/images/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
