--- a/.gitignore
+++ b/.gitignore
@@ -43,5 +43,7 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
-.vercel
-.env*.local
+
+# Environment variables
+*.env
+.env.*
