--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   firebase_auth: ^6.1.2
   google_sign_in: ^6.2.1
   cloud_firestore: ^6.1.0
+  flutter_gemini: ^3.0.0
+  flutter_dotenv: ^6.0.0
+  google_generative_ai: ^0.4.7
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +74,7 @@ flutter:
 
   assets:
     - assets/animations/
+    - .env.local
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
