--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,10 @@ dependencies:
   awesome_notifications: ^0.10.1
   timezone: ^0.10.1
   flutter_launcher_icons: ^0.14.4
+  cloudinary_public: ^0.23.1
+  image_picker: ^1.2.1
+  flutter_dotenv: ^6.0.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
@@ -75,6 +79,7 @@ flutter:
 
   assets:
     - assets/animations/
+    - .env.local
     #- assets/images/
   # To add assets to your application, add an assets section, like this:
   # assets:
